[gd_scene load_steps=3 format=3 uid="uid://bfxhmp8vcao0l"]

[ext_resource type="Script" path="res://Scenes/UI/HeroRecruitement/HeroRecruitementUI.gd" id="1_ruqq7"]
[ext_resource type="Texture2D" uid="uid://16mm3kgeaxwa" path="res://Sprites/Interface/QuitIcon.png" id="2_df04y"]

[node name="HeroRecruitmentUI" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ruqq7")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 581.0
offset_bottom = 334.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 10

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="Name" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 20.0
text = "Recruit Hero"
horizontal_alignment = 1

[node name="refreshBtn" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Refresh"

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 9.0

[node name="Hero1" type="HFlowContainer" parent="PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Name" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer/Hero1"]
layout_mode = 2
text = "ze"

[node name="Lvl" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer/Hero1"]
layout_mode = 2
text = "ze"

[node name="Classe" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer/Hero1"]
layout_mode = 2
text = "ze"

[node name="Race" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer/Hero1"]
layout_mode = 2
text = "ze"

[node name="RecruteBtn" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer/Hero1"]
layout_mode = 2
text = "recute"

[node name="Hero2" type="HFlowContainer" parent="PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Name" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer/Hero2"]
layout_mode = 2
text = "ze"

[node name="Lvl" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer/Hero2"]
layout_mode = 2
text = "ze"

[node name="Classe" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer/Hero2"]
layout_mode = 2
text = "e"

[node name="Race" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer/Hero2"]
layout_mode = 2
text = "ze"

[node name="RecruteBtn" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer/Hero2"]
layout_mode = 2
text = "ezcute"

[node name="Hero3" type="HFlowContainer" parent="PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Name" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer/Hero3"]
layout_mode = 2
text = "ez"

[node name="Lvl" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer/Hero3"]
layout_mode = 2
text = "ez"

[node name="Classe" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer/Hero3"]
layout_mode = 2
text = "ez"

[node name="Race" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer/Hero3"]
layout_mode = 2
text = "ez"

[node name="RecruteBtn" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer/Hero3"]
layout_mode = 2
text = "rectuer"

[node name="btnClose" type="TextureButton" parent="."]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
offset_left = 556.0
offset_top = -9.0
offset_right = 586.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("2_df04y")
stretch_mode = 0

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer2/HBoxContainer/refreshBtn" to="." method="_on_refresh_btn_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer/Hero1/RecruteBtn" to="." method="_on_recrute_btn_pressed" binds= [0]]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer/Hero2/RecruteBtn" to="." method="_on_recrute_btn_pressed" binds= [1]]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer/Hero3/RecruteBtn" to="." method="_on_recrute_btn_pressed" binds= [2]]
[connection signal="pressed" from="btnClose" to="." method="_on_btn_close_pressed"]
